tests/rosetta/transpiler/erl/doubly-linked-list-definition-2.error
exit status 127
escript: exception error: bad map: nil
  in function  main:insertbefore/3 
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/doubly-linked-list-definition-2.erl, line 169)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/doubly-linked-list-definition-2.erl, line 190)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 
